syntax = "proto3";

package cloudone.api.identity.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "cloudone/api/core/v1/query.proto";

service Project {
    rpc create(CreateProjectRequest) returns (ProjectInfo) {
        option (google.api.http) = { post: "/identity/v1/projects" };
    } 
    rpc update(UpdateProjectRequest) returns (ProjectInfo) {
        option (google.api.http) = { put: "/identity/v1/project/{project_id}" };
    }
    rpc delete(ProjectRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = { delete: "/identity/v1/project/{project_id}" };
    }
    rpc add_member(ProjectMemberRequest) returns (ProjectInfo) {
        option (google.api.http) = { post: "/identity/v1/project/{project_id}/add-member" };
    }
    rpc remove_member(ProjectMemberRequest) returns (ProjectInfo) {
        option (google.api.http) = { post: "/identity/v1/project/{project_id}/remove-member" };
    }
    rpc get(ProjectRequest) returns (ProjectInfo) {
        option (google.api.http) = { get: "/identity/v1/project/{project_id}" };
    }
    rpc list(ProjectQuery) returns (ProjectsInfo) {
        option (google.api.http) = { 
            get: "/identity/v1/projects" 
            additional_bindings {
                post: "identity/v1/projects/query"
            }
        };
    }
}

message CreateProjectRequest {
    string name = 1;                    // required
    string domain_id = 2;               // required
    google.protobuf.Struct tags = 3;    // required
}

message UpdateProjectRequest {
    string project_id = 1;              // required
    string name = 2;                    // optional
    google.protobuf.Struct tags = 3;    // required
}

message ProjectRequest {
    string project_id = 1;              // required
}

message ProjectMemberRequest {
    string project_id = 1;              // required
    string user_id = 2;                 // required
}

message ProjectQuery {
    enum State {
        ENABLE = 0;
        DISABLE = 1;
    }

    cloudone.api.core.v1.Query query = 1;   // optional
    string project_id = 2;                  // optional
    string name = 3;                        // optional
    State state = 4;                        // optional
    string domain_id = 5;                   // optional
    string user_id = 6;                     // optional
    string created_by_user_id = 7;          // optional
    string created_by_domain_id = 8;        // optional
}

message ProjectInfo {
    enum State {
        ENABLE = 0;
        DISABLE = 1;
    }

    message ProjectMemberInfo {
        string user_id = 1;
        string name = 2;
    }

    string project_id = 1;
    string name = 2;
    State state = 3;
    google.protobuf.Struct tags = 4;
    string domain_id = 5;
    string domain_name = 6;
    string created_by_user_id = 7;
    string created_by_domain_id = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp deleted_at = 10;
    repeated ProjectMemberInfo members = 11;
}

message ProjectsInfo {
    repeated ProjectInfo results = 1;
    int32 total_count = 2;
}
